fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -2,7 +2,7 @@
   "New API key": "Nuova chiave API",
   "Delete": "Cancella",
   "Revoke": "Revoca",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Revoca chiave API",
   "Revoke token": "Revoca token",
   "Open collection": "Apri la raccolta",
   "New collection": "Nuova raccolta",
@@ -40,8 +40,8 @@
   "Copy ID": "Copia ID",
   "Clear IndexedDB cache": "Pulisci cache IndexedDB",
   "IndexedDB cache cleared": "Cache IndexedDB pulita",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Pulisci archivio locale",
+  "Local storage cleared": "Archivio locale pulito",
   "Toggle debug logging": "Attiva/Disattiva il log di debug",
   "Debug logging enabled": "Log di debug attivato",
   "Debug logging disabled": "Log di debug disattivato",
@@ -88,9 +88,9 @@
   "Create template": "Crea un modello",
   "Open random document": "Apri un documento casuale",
   "Search documents for \"{{searchQuery}}\"": "Cerca documenti per \"{{searchQuery}}\"",
-  "Move to workspace": "Sposta allo spazio di lavoro",
+  "Move to workspace": "Sposta nello spazio di lavoro",
   "Move": "Sposta",
-  "Move to collection": "Sposta alla raccolta",
+  "Move to collection": "Sposta nella raccolta",
   "Move {{ documentType }}": "Sposta {{ documentType }}",
   "Are you sure you want to archive this document?": "Sei sicuro di voler archiviare questo documento?",
   "Document archived": "Documento archiviato",
@@ -142,7 +142,7 @@
   "Change theme": "Cambia tema",
   "Change theme to": "Cambia tema in",
   "Share link copied": "Link di condivisione copiato",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Vai alla raccolta",
   "Go to document": "Vai al documento",
   "Revoke link": "Revoca il link",
   "Share link revoked": "Link condivisione revocato",
@@ -175,7 +175,7 @@
   "currently viewing": "attualmente visualizzato",
   "previously edited": "precedentemente modificato",
   "You": "Tu",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Avatar di {{ name }}",
   "Viewers": "Visitatori",
   "Collections are used to group documents and choose permissions": "Le raccolte sono usate per raggruppare i documenti e assegnare i permessi",
   "Name": "Nome",
@@ -206,14 +206,14 @@
   "Move document": "Sposta il documento",
   "Moving": "Spostamento",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Spostare il documento <em>{{ title }}</em> alla raccolta {{ newCollectionName }} cambierà i permessi per tutti i membri dello spazio di lavoro da <em>{{ prevPermission }}</em> a <em>{{ newPermission }}</em>.",
-  "More options": "More options",
+  "More options": "Più opzioni",
   "Submenu": "Sottomenu",
   "Collections could not be loaded, please reload the app": "Impossibile caricare le raccolte, per favore ricarica l'app",
   "Start view": "Schermata iniziale",
   "Install now": "Installa ora",
   "Disconnect": "Disconnetti",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "Disconnecting": "Disconnessione in corso",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sei sicuro di voler disconnettere l'integrazione con <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raccolte Eliminate",
   "Untitled": "Senza titolo",
@@ -263,7 +263,7 @@
   "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Spiacenti, si è verificato un errore irreversibile{{notified}}. Prova a ricaricare la pagina, potrebbe essere un problema temporaneo.",
   "our engineers have been notified": "i nostri ingegneri sono stati informati",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Pulisci la cache e aggiorna",
   "Show detail": "Mostra dettagli",
   "{{userName}} archived": "{{userName}} archiviato",
   "{{userName}} restored": "{{userName}} recuperato",
@@ -284,9 +284,9 @@
   "You will receive an email when it's complete.": "Riceverai un'email quando sarà completata.",
   "Include attachments": "Includi allegati",
   "Including uploaded images and files in the exported data": "Includere immagini e file caricati nei dati esportati",
-  "{{count}} more user": "{{count}} more user",
-  "{{count}} more user_plural": "{{count}} more users",
-  "Filter options": "Filter options",
+  "{{count}} more user": "{{count}} utente ancora",
+  "{{count}} more user_plural": "{{count}} utenti ancora",
+  "Filter options": "Opzioni di filtro",
   "Filter": "Filtro",
   "No results": "Nessun risultato",
   "{{authorName}} created <3></3>": "Creato\n\n\n\n\n\n\n\n",
@@ -319,11 +319,11 @@
   "Change Language": "Cambia Lingua",
   "Dismiss": "Chiudi",
   "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "View, navigate, or download images in the document": "Visualizza, naviga, o scarica immagini nel documento",
   "Close": "Chiudi",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Precedente",
+  "Next": "Successivo",
+  "Image failed to load": "Il caricamento dell'immagine è fallito",
   "You’re offline.": "Sei offline.",
   "Sorry, an error occurred.": "Spiacenti, si è verificato un errore.",
   "Click to retry": "Clicca per riprovare",
@@ -332,7 +332,7 @@
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
   "Icon": "Icona",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "Icona client OAuth",
   "My App": "La mia App",
   "Tagline": "Slogan",
   "A short description": "Una breve descrizione",
@@ -367,7 +367,7 @@
   "Disable this setting to discourage search engines from indexing the page": "Disabilita questa impostazione per scoraggiare i motori di ricerca dall'indicizzare la pagina",
   "Show last modified": "Mostra l'ultima modifica",
   "Display the last modified timestamp on the shared page": "Mostra la data dell'ultima modifica nella pagina condivisa",
-  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
+  "All documents in this collection will be shared on the web, including any new documents added later": "Tutti i documenti in questa raccolta saranno condivisi sul web, inclusi eventuali nuovi documenti aggiunti successivamente",
   "Invite": "Invita",
   "{{ userName }} was added to the collection": "{{ userName }} stato aggiunto alla raccolta",
   "{{ count }} people added to the collection": "Persone aggiunte alla collezione",
@@ -409,15 +409,15 @@
   "{{ count }} groups added to the document": "Gruppi aggiunti al documento",
   "{{ count }} groups added to the document_plural": "Gruppi aggiunti al documento",
   "Logo": "Logo",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "Espandi barra laterale",
+  "Collapse sidebar": "Nascondi barra laterale",
   "Archived collections": "Collezioni archiviate",
   "New doc": "Nuovo documento",
   "Empty": "Vuoto",
   "Collapse": "Raggruppa",
   "Expand": "Espandi",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento non supportato – prova Markdown, testo semplice, HTML o Word",
-  "Import files": "Import files",
+  "Import files": "Importa file",
   "Go back": "Torna indietro",
   "Go forward": "Vai avanti",
   "Could not load shared documents": "Impossibile caricare i documenti condivisi",
@@ -456,7 +456,7 @@
   "New email": "Nuova email",
   "Email can't be empty": "L'email non può essere vuota",
   "Your import completed": "Importazione completata",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
+  "Sorry, invalid embed link": "Link d'incorporamento non valido",
   "Previous match": "Pagina precedente",
   "Next match": "Prossima Partita",
   "Find and replace": "Trova e sostituisci",
@@ -467,20 +467,22 @@
   "Replacement": "Sostituire",
   "Replace": "Sostituisci",
   "Replace all": "Sostituisci tutti",
-  "Image width": "Image width",
-  "Image height": "Image height",
+  "Image width": "Larghezza immagine",
+  "Width": "Largezza",
+  "Image height": "Altezza immagine",
+  "Height": "Altezza",
   "Profile picture": "Immagine del profilo",
   "Create a new doc": "Crea un nuovo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} Non verrà notificato, in quanto Non",
   "Keep as link": "Mantieni come link",
   "Mention": "Menzione",
   "Embed": "Incorpora",
-  "Insert after": "Insert after",
-  "Insert before": "Insert before",
-  "Move up": "Move up",
-  "Move down": "Move down",
-  "Move left": "Move left",
-  "Move right": "Move right",
+  "Insert after": "Inserisci dopo",
+  "Insert before": "Inserisci prima",
+  "Move up": "Sposta su",
+  "Move down": "Sposta giù",
+  "Move left": "Sposta a sinistra",
+  "Move right": "Sposta a destra",
   "Align center": "Allinea al centro",
   "Align left": "Allinea a sinistra",
   "Align right": "Allinea a destra",
@@ -497,8 +499,6 @@
   "Create a new child doc": "Crea un nuovo documento",
   "Delete table": "Elimina tabella",
   "Delete file": "Cancella file",
-  "Width": "Width",
-  "Height": "Height",
   "Download file": "Scarica il file",
   "Replace file": "Sostituisci file",
   "Delete image": "Elimina immagine",
@@ -559,7 +559,7 @@
   "Outdent": "Riduci rientro",
   "Video": "Video",
   "None": "Nessuno",
-  "Delete embed": "Delete embed",
+  "Delete embed": "Elimina incorporamento",
   "Rename": "Rinomina",
   "Could not import file": "Impossibile importare il file",
   "Unsubscribed from document": "Annullata l'iscrizione al documento",
@@ -576,7 +576,7 @@
   "Import": "Importa",
   "Install": "Installa",
   "Integrations": "Integrazioni",
-  "API key": "API key",
+  "API key": "Chiave API",
   "Show path to document": "Mostra percorso del documento",
   "Sort in sidebar": "Ordina nella barra laterale",
   "A-Z sort": "Ordina da A-Z",
@@ -635,7 +635,7 @@
   "30 days": "30 giorni",
   "60 days": "60 giorni",
   "90 days": "90 giorni",
-  "Custom": "Custom",
+  "Custom": "Personalizzato",
   "No expiration": "Nessuna scadenza",
   "The document archive is empty at the moment.": "L'archivio documenti è vuoto al momento.",
   "Drop documents to import": "Trascina qui i documenti oppure",
@@ -671,7 +671,7 @@
   "Order in doc": "Order in doc",
   "Resolved": "Risolto",
   "Sort comments": "Ordina commenti",
-  "Show {{ count }} reply": "Show {{ count }} reply",
+  "Show {{ count }} reply": "Mostra {{ count }} risposte",
   "Show {{ count }} reply_plural": "Mostra {{ count }} risposte",
   "Error updating comment": "Errore durante l'aggiornamento del commento",
   "Document is too large": "Il documento è troppo grande",
@@ -692,7 +692,7 @@
   "only you": "solo tu",
   "person": "persona",
   "people": "persone",
-  "Document title": "Document title",
+  "Document title": "Titolo del documento",
   "Last updated": "Ultimo aggiornamento",
   "Type '/' to insert, or start writing…": "Digita '/' per inserire, o inizia a scrivere…",
   "Hide contents": "Nascondi contenuti",
@@ -706,7 +706,7 @@
   "No history yet": "Nessuna cronologia",
   "Source": "Origine",
   "Created": "Creato",
-  "Imported from {{ source }}": "Imported from {{ source }}",
+  "Imported from {{ source }}": "Importato da {{ source }}",
   "Stats": "Statistiche",
   "{{ number }} minute read": "{{ number }} minute read",
   "{{ number }} words": "{{ number }} word",
@@ -818,11 +818,11 @@
   "Outdent list item": "Riduci rientro",
   "Move list item up": "Sposta elemento su",
   "Move list item down": "Sposta elemento giù",
-  "Tables": "Tables",
+  "Tables": "Tabelle",
   "Insert row": "Insert row",
-  "Next cell": "Next cell",
-  "Previous cell": "Previous cell",
-  "Space": "Space",
+  "Next cell": "Cella successiva",
+  "Previous cell": "Cella precedente",
+  "Space": "Spazio",
   "Numbered list": "Elenco numerato",
   "Blockquote": "Citazione",
   "Horizontal divider": "Separatore orizzontale",
