--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -260,7 +260,7 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Spiacenti, parte dell'applicazione non si è caricata correttamente. È possibile che sia stata aggiornata da quando hai aperto la scheda oppure è fallita una richiesta di rete. Si prega di ricaricare la pagina.",
   "Reload": "Ricaricare",
   "Something Unexpected Happened": "È successo qualcosa di imprevisto",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Di recente un errore è stato riscontrato più volte. Se persiste prova a pulire la cache o ad utilizzare un browser differente.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Spiacenti, si è verificato un errore irreversibile{{notified}}. Prova a ricaricare la pagina, potrebbe essere un problema temporaneo.",
   "our engineers have been notified": "i nostri ingegneri sono stati informati",
   "Clear cache + reload": "Pulisci la cache e aggiorna",
@@ -622,7 +622,7 @@
   "mentioned you in": "Ti ha menzionato in",
   "left a comment on": "Lasciato un commento",
   "resolved a comment on": "Risolto un commento",
-  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
+  "reacted {{ emoji }} to your comment on": "ha reagito con {{ emoji }} al tuo commento su",
   "shared": "condiviso",
   "invited you to": "Ti ha invitato a",
   "Choose a date": "Seleziona una data",
@@ -664,11 +664,11 @@
   "Reply": "Rispondi",
   "Post": "Pubblica",
   "Upload image": "Carica immagine",
-  "No resolved comments": "No resolved comments",
+  "No resolved comments": "Nessun commento risolto",
   "No comments yet": "Nessun commento",
   "New comments": "Nuovi commenti",
   "Most recent": "Più recente",
-  "Order in doc": "Order in doc",
+  "Order in doc": "Ordine nel doc",
   "Resolved": "Risolto",
   "Sort comments": "Ordina commenti",
   "Show {{ count }} reply": "Mostra {{ count }} risposte",
@@ -708,24 +708,24 @@
   "Created": "Creato",
   "Imported from {{ source }}": "Importato da {{ source }}",
   "Stats": "Statistiche",
-  "{{ number }} minute read": "{{ number }} minute read",
-  "{{ number }} words": "{{ number }} word",
-  "{{ number }} words_plural": "{{ number }} words",
-  "{{ number }} characters": "{{ number }} character",
-  "{{ number }} characters_plural": "{{ number }} characters",
+  "{{ number }} minute read": "{{ number }} minuto di lettura",
+  "{{ number }} words": "{{ number }} parola",
+  "{{ number }} words_plural": "{{ number }} parole",
+  "{{ number }} characters": "{{ number }} carattere",
+  "{{ number }} characters_plural": "{{ number }} caratteri",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Nessun testo selezionato",
-  "{{ number }} words selected": "{{ number }} word selected",
-  "{{ number }} words selected_plural": "{{ number }} words selected",
-  "{{ number }} characters selected": "{{ number }} character selected",
-  "{{ number }} characters selected_plural": "{{ number }} characters selected",
+  "{{ number }} words selected": "{{ number }} parola selezionata",
+  "{{ number }} words selected_plural": "{{ number }} parole selezionate",
+  "{{ number }} characters selected": "{{ number }} carattere selezionato",
+  "{{ number }} characters selected_plural": "{{ number }} caratteri selezionati",
   "Contributors": "Contributori",
   "Creator": "Autore",
   "Last edited": "Ultima modifica",
   "Previously edited": "Modificato precedentemente",
   "Sorry, the last change could not be persisted – please reload the page": "Spiacenti, non è stato possibile mantenere l'ultima modifica. Si prega di ricaricare la pagina",
-  "{{ count }} days": "{{ count }} day",
-  "{{ count }} days_plural": "{{ count }} days",
+  "{{ count }} days": "{{ count }} giorno",
+  "{{ count }} days_plural": "{{ count }} giorni",
   "This template will be permanently deleted in <2></2> unless restored.": "Questo modello verrà eliminato definitivamente in <2></2> salvo ripristino.",
   "This document will be permanently deleted in <2></2> unless restored.": "Questo documento verrà eliminato definitivamente tra <2></2> salvo ripristino.",
   "Highlight some text and use the <1></1> control to add placeholders that can be filled out when creating new documents": "Evidenzia del testo e usa il comando <1></1> per aggiungere dei segnaposto che possono essere compilati nella creazione di nuovi documenti",
@@ -733,7 +733,7 @@
   "Deleted by {{userName}}": "Eliminato da {{userName}}",
   "Observing {{ userName }}": "Osservazione di {{ userName }}",
   "Backlinks": "Backlink",
-  "This document is large which may affect performance": "This document is large which may affect performance",
+  "This document is large which may affect performance": "Questo documento è grande, potrebbe influenzare le prestazioni",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Sei sicuro di voler eliminare il template <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Sei sicuro? L'eliminazione del documento <em>{{ documentTitle }}</em> cancellerà tutta la sua cronologia</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Sei sicuro? L'eliminazione del documento <em>{{ documentTitle }}</em> cancellerà tutta la sua cronologia e <em>{{ any }} documenti annidati</em>.",
@@ -753,19 +753,19 @@
   "Search documents": "Cerca documenti",
   "No documents found for your filters.": "Nessun documento trovato per i tuoi filtri.",
   "You’ve not got any drafts at the moment.": "Al momento non hai bozze.",
-  "Payment Required": "Payment Required",
-  "No access to this doc": "No access to this doc",
-  "It doesn’t look like you have permission to access this document.": "It doesn’t look like you have permission to access this document.",
-  "Please request access from the document owner.": "Please request access from the document owner.",
-  "Not found": "Not found",
-  "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
+  "Payment Required": "Pagamento Richiesto",
+  "No access to this doc": "Non hai accesso a questo documento",
+  "It doesn’t look like you have permission to access this document.": "Sembra che tu non abbia i permessi per accedere a questo documento",
+  "Please request access from the document owner.": "Richiedi l'accesso al proprietario del documento",
+  "Not found": "Non trovato",
+  "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "La pagina che stai cercando non è stata trovata. Potrebbe essere stata eliminata oppure il link non è corretto.",
   "Offline": "Non in linea",
   "We were unable to load the document while offline.": "Impossibile caricare il documento offline.",
   "Your account has been suspended": "Il tuo account è stato sospeso",
   "Warning Sign": "Simbolo di avvertenza",
-  "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.": "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.",
-  "Something went wrong": "Something went wrong",
-  "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
+  "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.": "Un amministratore dello spazio di lavoro (<em>{{ suspendedContactEmail }}</em>) ha sospeso il tuo account. Contattalo per farlo riattivare.",
+  "Something went wrong": "Qualcosa è andato storto",
+  "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Si è verificato un errore sconosciuto durante il caricamento della pagina. Riprova o contatta il supporto se il problema persiste.",
   "Created by me": "Creato da me",
   "Weird, this shouldn’t ever be empty": "Strano, questo non dovrebbe mai essere vuoto",
   "You haven’t created any documents yet": "Non hai ancora creato alcun documento",
@@ -774,21 +774,21 @@
   "Those email addresses are already invited": "Agli indirizzi email è stato già inviato un invito",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Spiacenti, puoi inviare solo {{MAX_INVITES}} inviti alla volta",
   "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
-  "{{collectionCount}} collections": "{{collectionCount}} collections",
+  "{{collectionCount}} collections": "{{collectionCount}} raccolte",
   "Admin": "Amministratore",
-  "Can manage all workspace settings": "Can manage all workspace settings",
-  "Can create, edit, and delete documents": "Can create, edit, and delete documents",
-  "Can view and comment": "Can view and comment",
-  "Invite people to join your workspace. They can sign in with {{signinMethods}} or use their email address.": "Invite people to join your workspace. They can sign in with {{signinMethods}} or use their email address.",
+  "Can manage all workspace settings": "Può gestire tutte le impostazioni dello spazio di lavoro",
+  "Can create, edit, and delete documents": "Può creare, modificare ed eliminare documenti",
+  "Can view and comment": "Può vedere e commentare",
+  "Invite people to join your workspace. They can sign in with {{signinMethods}} or use their email address.": "Invita persone ad entrare nel tuo spazio di lavoro. Possono registrarsi con {{signinMethods}} oppure usando il proprio indirizzo email.",
   "Invite members to join your workspace. They will need to sign in with {{signinMethods}}.": "Invita membri a unirsi alla tua area di lavoro. Dovranno accedere con {{signinMethods}} o utilizzare il loro indirizzo email.",
   "As an admin you can also <2>enable email sign-in</2>.": "Come amministratore puoi anche <2>abilitare l'autenticazione via email</2>.",
-  "Invite as": "Invite as",
+  "Invite as": "Invita come",
   "Email": "Email",
   "Add another": "Aggiungi ancora",
   "Inviting": "Sto invitando",
   "Send Invites": "Spedisci gli inviti",
   "Open command menu": "Apri menu dei comandi",
-  "Forward": "Forward",
+  "Forward": "Inoltro",
   "Edit current document": "Modifica il documento corrente",
   "Move current document": "Sposta il documento corrente",
   "Open document history": "Apri cronologia del documento",
@@ -796,11 +796,11 @@
   "Jump to home": "Vai alla home",
   "Focus search input": "Focus input di ricerca",
   "Open this guide": "Apri questa guida",
-  "Enter": "Enter",
+  "Enter": "Invio",
   "Publish document and exit": "Pubblica documento ed esci",
   "Save document": "Salva il documento",
   "Cancel editing": "Annulla modifica",
-  "Collaboration": "Collaboration",
+  "Collaboration": "Collaborazione",
   "Formatting": "Formattazione",
   "Paragraph": "Paragrafo",
   "Large header": "Intestazione grande",
@@ -809,17 +809,17 @@
   "Underline": "Sottolineato",
   "Undo": "Annulla",
   "Redo": "Ripristina",
-  "Move block up": "Move block up",
-  "Move block down": "Move block down",
+  "Move block up": "Sposta blocco in alto",
+  "Move block down": "Sposta blocco in basso",
   "Lists": "Elenchi",
-  "Toggle task list item": "Toggle task list item",
-  "Tab": "Tab",
+  "Toggle task list item": "Attiva/Disattiva elemento da un elenco di attività",
+  "Tab": "Scheda",
   "Indent list item": "Aumenta rientro",
   "Outdent list item": "Riduci rientro",
   "Move list item up": "Sposta elemento su",
   "Move list item down": "Sposta elemento giù",
   "Tables": "Tabelle",
-  "Insert row": "Insert row",
+  "Insert row": "Inserisci riga",
   "Next cell": "Cella successiva",
   "Previous cell": "Cella precedente",
   "Space": "Spazio",
@@ -830,18 +830,18 @@
   "Inline code": "Codice inline",
   "Inline LaTeX": "LaTeX in linea",
   "Triggers": "Triggers",
-  "Mention users and more": "Mention users and more",
+  "Mention users and more": "Menziona utenti e altro ancora",
   "Emoji": "Emoji",
-  "Insert block": "Insert block",
+  "Insert block": "Inserisci blocco",
   "Sign In": "Accedi",
   "Continue with Email": "Continua con email",
   "Continue with {{ authProviderName }}": "Continua con {{ authProviderName }}",
   "Back to home": "Torna alla home",
-  "The workspace could not be found": "The workspace could not be found",
-  "To continue, enter your workspace’s subdomain.": "To continue, enter your workspace’s subdomain.",
-  "subdomain": "subdomain",
+  "The workspace could not be found": "Non è stato possibile trovare lo spazio di lavoro",
+  "To continue, enter your workspace’s subdomain.": "Per continuare, inserisci il sottodominio del tuo spazio di lavoro.",
+  "subdomain": "sottodominio",
   "Continue": "Continua",
-  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
+  "Sorry, the code you entered is invalid or has expired.": "Il codice che hai inserito non è valido o è scaduto.",
   "The domain associated with your email address has not been allowed for this workspace.": "Il dominio associato al tuo indirizzo email non è permesso in questa area di lavoro.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Impossibile effettuare l'accesso. Per favore vai all'URL personalizzato della tua area di lavoro, quindi prova di nuovo ad accedere.<1></1>Se sei stato invitato in un'area di lavoro, troverai un link di accesso nella mail d'invito.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Spiacenti, non è possibile creare un nuovo account con un indirizzo Gmail personale.<1></1>Utilizza invece un account Google Workspaces.",
@@ -906,7 +906,7 @@
   "reactions": "reactions",
   "pins": "pins",
   "shares": "shares",
-  "users": "users",
+  "users": "utenti",
   "teams": "teams",
   "workspace": "workspace",
   "Read all data": "Read all data",
