Add context menu to sidebar document link

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -423,6 +423,7 @@
   "Could not load shared documents": "Could not load shared documents",
   "Shared with me": "Shared with me",
   "Show more": "Show more",
+  "Link options": "Link options",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "Starred",
   "Up to date": "Up to date",
