--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -545,6 +545,7 @@
   "Italic": "Italic",
   "Sorry, that link won’t work for this embed type": "Sorry, that link won’t work for this embed type",
   "File attachment": "File attachment",
+  "Upload PDF": "Upload PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Big heading",
   "Medium heading": "Medium heading",
