--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -2,7 +2,7 @@
   "New API key": "Nova chave de API",
   "Delete": "Excluir",
   "Revoke": "Revogar",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Revogar Chave API",
   "Revoke token": "Revogar token",
   "Open collection": "Abrir coleção",
   "New collection": "Nova coleção",
@@ -40,8 +40,8 @@
   "Copy ID": "Copiar ID",
   "Clear IndexedDB cache": "Limpar cache do IndexedDB",
   "IndexedDB cache cleared": "Cache do IndexedDB limpo",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Limpar armazenamento local",
+  "Local storage cleared": "Armazenamento local limpo",
   "Toggle debug logging": "Alternar log de depuração",
   "Debug logging enabled": "Log de depuração habilitado",
   "Debug logging disabled": "Log de depuração desativado",
@@ -142,7 +142,7 @@
   "Change theme": "Alterar tema",
   "Change theme to": "Alterar tema para",
   "Share link copied": "Link de compartilhamento copiado",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Ir para a coleção",
   "Go to document": "Ir para o documento",
   "Revoke link": "Revogar link",
   "Share link revoked": "Link de compartilhamento revogado",
@@ -175,7 +175,7 @@
   "currently viewing": "atualmente visualizando",
   "previously edited": "editou anteriormente",
   "You": "Você",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Avatar de {{ name }}",
   "Viewers": "Visualizadores",
   "Collections are used to group documents and choose permissions": "Coleções são usadas para agrupar documentos e definir permissões",
   "Name": "Nome",
@@ -206,14 +206,14 @@
   "Move document": "Mover documento",
   "Moving": "Movendo",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Mover o documento <em>{{ title }}</em> para a coleção {{ newCollectionName }} mudará a permissão para todos os membros do espaço de trabalho de <em>{{ prevPermission }}</em> para <em>{{ newPermission }}</em>.",
-  "More options": "More options",
+  "More options": "Mais opções",
   "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as coleções, recarregue o aplicativo",
   "Start view": "Visualização de início",
   "Install now": "Instalar agora",
   "Disconnect": "Desconectar",
   "Disconnecting": "Desconectando",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Você realmente deseja desconectar a integração <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Excluir Coleção",
   "Untitled": "Sem título",
@@ -321,9 +321,9 @@
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Fechar",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Anterior",
+  "Next": "Próximo",
+  "Image failed to load": "Falha ao carregar a imagem",
   "You’re offline.": "Você está desconectado.",
   "Sorry, an error occurred.": "Desculpe, ocorreu um erro.",
   "Click to retry": "Clique para tentar novamente",
@@ -409,8 +409,8 @@
   "{{ count }} groups added to the document": "{{ count }} grupos foram adicionados ao documento",
   "{{ count }} groups added to the document_plural": "{{ count }} grupos foram adicionados ao documento",
   "Logo": "Logotipo",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "Expandir barra lateral",
+  "Collapse sidebar": "Minimizar barra lateral",
   "Archived collections": "Coleções arquivadas",
   "New doc": "Novo documento",
   "Empty": "Vazio",
@@ -467,20 +467,22 @@
   "Replacement": "Substituição",
   "Replace": "Substituir",
   "Replace all": "Substituir todos",
-  "Image width": "Image width",
-  "Image height": "Image height",
+  "Image width": "Largura da imagem",
+  "Width": "Largura",
+  "Image height": "Altura da imagem",
+  "Height": "Altura",
   "Profile picture": "Imagem do perfil",
   "Create a new doc": "Criar um novo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} não será notificado, pois não tem acesso a este documento",
   "Keep as link": "Manter como link",
   "Mention": "Menção",
   "Embed": "Incorporar",
-  "Insert after": "Insert after",
-  "Insert before": "Insert before",
-  "Move up": "Move up",
-  "Move down": "Move down",
-  "Move left": "Move left",
-  "Move right": "Move right",
+  "Insert after": "Inserir depois",
+  "Insert before": "Inserir antes",
+  "Move up": "Mover acima",
+  "Move down": "Mover abaixo",
+  "Move left": "Mover à esquerda",
+  "Move right": "Mover à direita",
   "Align center": "Alinhar ao centro",
   "Align left": "Alinhar à esquerda",
   "Align right": "Alinhar à direita",
@@ -497,8 +499,6 @@
   "Create a new child doc": "Criar um documento filho",
   "Delete table": "Excluir tabela",
   "Delete file": "Excluir arquivo",
-  "Width": "Width",
-  "Height": "Height",
   "Download file": "Baixar arquivo",
   "Replace file": "Substituir arquivo",
   "Delete image": "Excluir imagem",
@@ -576,7 +576,7 @@
   "Import": "Importar",
   "Install": "Instalar",
   "Integrations": "Integrações",
-  "API key": "API key",
+  "API key": "Chave de API",
   "Show path to document": "Mostrar caminho para o documento",
   "Sort in sidebar": "Ordenar na barra lateral",
   "A-Z sort": "Ordenar A-Z",
@@ -586,7 +586,7 @@
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar Estatísticas de Visualização",
   "Enable embeds": "Habilitar incorporações",
-  "File": "File",
+  "File": "Arquivo",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
   "Delete group": "Remover grupo",
