fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -263,7 +263,7 @@
   "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Desculpe, ocorreu um erro irrecuperável{{notified}}. Por favor, tente recarregar a página, pode ter sido uma falha temporária.",
   "our engineers have been notified": "nossos engenheiros foram notificados",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Limpar cache e recarregar",
   "Show detail": "Exibir detalhes",
   "{{userName}} archived": "{{userName}} arquivado",
   "{{userName}} restored": "{{userName}} restaurado",
@@ -286,7 +286,7 @@
   "Including uploaded images and files in the exported data": "Incluindo imagens e arquivos carregados nos dados exportados",
   "{{count}} more user": "Mais {{count}} usuários",
   "{{count}} more user_plural": "{{count}} mais usuários",
-  "Filter options": "Filter options",
+  "Filter options": "Opções de filtro",
   "Filter": "Filtro",
   "No results": "Sem resultados",
   "{{authorName}} created <3></3>": "{{authorName}} criou <3></3>",
@@ -332,7 +332,7 @@
   "Mark all as read": "Marcar tudo como lido",
   "You're all caught up": "Você está em dia",
   "Icon": "Ícone",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "Ícone cliente OAuth",
   "My App": "Meu Aplicativo",
   "Tagline": "Slogan",
   "A short description": "Uma breve descrição",
@@ -417,7 +417,7 @@
   "Collapse": "Recolher",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento não compatível - experimente Markdown, Texto simples, HTML ou Word",
-  "Import files": "Import files",
+  "Import files": "Importar arquivos",
   "Go back": "Voltar",
   "Go forward": "Avançar",
   "Could not load shared documents": "Não foi possível carregar documentos compartilhados",
@@ -622,7 +622,7 @@
   "mentioned you in": "mencionou você em",
   "left a comment on": "deixou um comentário em",
   "resolved a comment on": "resolveu um comentário em",
-  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
+  "reacted {{ emoji }} to your comment on": "reagiu com {{ emoji }} ao seu comentário em",
   "shared": "compartilhado",
   "invited you to": "convidou você para",
   "Choose a date": "Escolha uma data",
@@ -692,7 +692,7 @@
   "only you": "apenas você",
   "person": "pessoa",
   "people": "pessoas",
-  "Document title": "Document title",
+  "Document title": "Título do Documento",
   "Last updated": "Última atualização",
   "Type '/' to insert, or start writing…": "Digite '/' para inserir, ou comece a escrever…",
   "Hide contents": "Ocultar conteúdo",
@@ -937,7 +937,7 @@
   "Rotate secret": "Rotacionar segredo",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacionar o segredo do cliente invalidará o segredo atual. Certifique-se de atualizar todas as aplicações usando essas credenciais.",
   "Displayed to users when authorizing": "Visível aos usuários ao autorizar",
-  "Application icon": "Application icon",
+  "Application icon": "Ícone do aplicativo",
   "Developer information shown to users when authorizing": "Informações de desenvolvedor exibidas aos usuários ao autorizar",
   "Developer name": "Nome do desenvolvedor",
   "Developer URL": "URL do desenvolvedor",
@@ -1001,8 +1001,8 @@
   "Search people": "Procurar pessoas",
   "No people matching your search": "Nenhuma pessoa corresponde à sua pesquisa",
   "No people left to add": "Nenhuma pessoa restante para adicionar",
-  "Group admin": "Group admin",
-  "Member": "Member",
+  "Group admin": "Administrador do Grupo",
+  "Member": "Membro",
   "Admins": "Administradores",
   "Date created": "Data de criação",
   "Crop Image": "Cortar imagem",
@@ -1026,7 +1026,7 @@
   "Guest": "Visitante",
   "Never used": "Nunca utilizado",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Tem certeza de que deseja excluir a aplicação {{ appName }} ? Isso não pode ser desfeito.",
-  "Title": "Title",
+  "Title": "Título",
   "Shared by": "Compartilhado por",
   "Date shared": "Data de compartilhamento",
   "Last accessed": "Último acessado",
@@ -1045,7 +1045,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Essas configurações afetam a forma como o seu espaço de trabalho aparece para todos da equipe.",
   "Display": "Exibição",
   "The logo is displayed at the top left of the application.": "O logotipo é exibido no canto superior esquerdo do aplicativo.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Logotipo do espaço de trabalho",
   "The workspace name, usually the same as your company name.": "O nome do espaço de trabalho, geralmente igual ao nome da sua empresa.",
   "Description": "Descrição",
   "A short description of your workspace.": "Uma breve descrição do seu espaço de trabalho.",
@@ -1095,8 +1095,8 @@
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Receba uma notificação quando alguém mencionar você em um documento ou comentário",
   "Receive a notification when a comment thread you were involved in is resolved": "Receber uma notificação quando um tópico de comentários em que você participou for resolvido",
-  "Reaction added": "Reaction added",
-  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
+  "Reaction added": "Reação adicionada",
+  "Receive a notification when someone reacts to your comment": "Receber notificação quando alguém reagir ao seu comentário",
   "Collection created": "Coleção criada",
   "Receive a notification whenever a new collection is created": "Receba uma notificação sempre que uma nova coleção for criada",
   "Invite accepted": "Convite aceito",
@@ -1276,7 +1276,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} atualizou {{ timeAgo }}",
   "You created {{ timeAgo }}": "Você criou {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} criou {{ timeAgo }}",
-  "Caption": "Caption",
-  "Open": "Open",
+  "Caption": "Título",
+  "Open": "Abrir",
   "Error loading data": "Erro ao carregar os dados"
 }
