--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -175,7 +175,7 @@
   "currently viewing": "jelenleg megtekinti",
   "previously edited": "előzőleg szerkesztette",
   "You": "Ön",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "{{ name }} profilképe",
   "Viewers": "Megtekintők",
   "Collections are used to group documents and choose permissions": "A gyűjtemények dokumentuok csoportosítására és jogosultságok beállítására szolgálnak",
   "Name": "Név",
@@ -206,7 +206,7 @@
   "Move document": "Dokumentum áthelyezése",
   "Moving": "Áthelyezés",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "A {{ title }} nevű dokumentum áthelyezése a {{ newCollectionName }} gyűjteménybe megváltoztatja a munkaterület tagjainak hozzáférését: {{ prevPermission }} -> {{ newPermission }}",
-  "More options": "More options",
+  "More options": "További lehetőségek",
   "Submenu": "Almenü",
   "Collections could not be loaded, please reload the app": "A gyűjtemények nem tölthetők be, kérem töltse újra a programot",
   "Start view": "Kezdje el",
@@ -284,9 +284,9 @@
   "You will receive an email when it's complete.": "Egy e-mail-t fog kapni, mikor elkészült.",
   "Include attachments": "Csatolmányokkal együtt",
   "Including uploaded images and files in the exported data": "A feltöltött képek és fájlok is exportálva lesznek",
-  "{{count}} more user": "{{count}} more user",
+  "{{count}} more user": "licat",
   "{{count}} more user_plural": "{{count}} more users",
-  "Filter options": "Filter options",
+  "Filter options": "Szűrési lehetőségek",
   "Filter": "Szűrő",
   "No results": "Nincs találat",
   "{{authorName}} created <3></3>": "{{authorName}} hozta lére <3></3>",
@@ -321,9 +321,9 @@
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Bezár",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Előző",
+  "Next": "Következő",
+  "Image failed to load": "A képet nem lehetett betölteni",
   "You’re offline.": "Az Ön állapota offline.",
   "Sorry, an error occurred.": "Elnézést, valami hiba történt.",
   "Click to retry": "Kattintson az újrapróbáláshoz",
@@ -389,7 +389,7 @@
   "Other people": "Más emberek",
   "Other workspace members may have access": "A munkaterület más tagjainak is hozzáférése lehet",
   "This document may be shared with more workspace members through a parent document or collection you do not have access to": "Ez a dokumentum megosztható a munkaterület más tagjaival is egy szülődokumentumon vagy szülőgyűjteményen keresztül",
-  "Access inherited from collection": "Access inherited from collection",
+  "Access inherited from collection": "Hozzáférés örökölve a gyűjteményből",
   "{{ userName }} was removed from the document": "{{ userName }} eltávolítva a dokumentumból",
   "Could not remove user": "Nem lehet a felhasználót eltávolítani",
   "Permissions for {{ userName }} updated": "{{ userName }} jogosultságai frissítve",
@@ -468,7 +468,9 @@
   "Replace": "Cserél",
   "Replace all": "Összeset cseréli",
   "Image width": "Image width",
+  "Width": "Width",
   "Image height": "Image height",
+  "Height": "Height",
   "Profile picture": "Profilkép",
   "Create a new doc": "Új doku létrehozása",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -497,8 +499,6 @@
   "Create a new child doc": "Új doku létrehozása",
   "Delete table": "Táblázat törlése",
   "Delete file": "Fájl törlése",
-  "Width": "Width",
-  "Height": "Height",
   "Download file": "Fájl letöltése",
   "Replace file": "Fájl lecserélése",
   "Delete image": "Kép törlése",
@@ -571,7 +571,7 @@
   "Features": "Funkciók",
   "Members": "Tagok",
   "API Keys": "API-kulcsok",
-  "Applications": "Applications",
+  "Applications": "Alkalmazások",
   "Shared Links": "Megosztott hivatkozások",
   "Import": "Importálás",
   "Install": "Install",
@@ -738,7 +738,7 @@
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>._plural": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested documents</em>.",
-  "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.",
+  "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "Ha szeretnéd, hogy később visszaállíthasd vagy hivatkozhass a {{noun}}, fontold meg inkább az archiválás lehetőségét.",
   "Select a location to move": "Select a location to move",
   "Document moved": "Document moved",
   "Couldn’t move the document, try again?": "Couldn’t move the document, try again?",
@@ -766,7 +766,7 @@
   "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.": "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.",
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
-  "Created by me": "Created by me",
+  "Created by me": "Általam létrehozva",
   "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
@@ -1096,7 +1096,7 @@
   "Receive a notification when someone mentions you in a document or comment": "Értesítés fogadása, amikor valaki megemlíti Önt egy dokumentumban vagy hozzászólásban",
   "Receive a notification when a comment thread you were involved in is resolved": "Értesítés fogadása, amikor megoldanak egy olyan hozzászólási szálat, amelyben Ön is részt vett",
   "Reaction added": "Reaction added",
-  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
+  "Receive a notification when someone reacts to your comment": "Értesítlst kapsz, ha valaki reagál a hozzászólásodra",
   "Collection created": "Gyűjtemény létrehozva",
   "Receive a notification whenever a new collection is created": "Értesítés fogadása, amikor új gyűjteményt hoznak létre",
   "Invite accepted": "Meghívás elfogadva",
@@ -1130,7 +1130,7 @@
   "Automatically return to the document you were last viewing when the app is re-opened.": "Automatikus visszatérés az utoljára megtekintett dokumentumhoz az alkalmazás újbóli megnyitásakor.",
   "Smart text replacements": "Intelligens szöveghelyettesítések",
   "Auto-format text by replacing shortcuts with symbols, dashes, smart quotes, and other typographical elements.": "Automatikus szövegformázás a rövidítések szimbólumokkal, kötőjelekkel, intelligens idézőjelekkel és más tipográfiai elemekkel való helyettesítésével.",
-  "You may delete your account at any time, note that this is unrecoverable": "You may delete your account at any time, note that this is unrecoverable",
+  "You may delete your account at any time, note that this is unrecoverable": "Bármikor törölheted a fiókodat, de fontos, hogy utána nem szerezheted vissza",
   "Profile saved": "Profil elmentve",
   "Profile picture updated": "Profilkép frissítve",
   "Unable to upload new profile picture": "Nem lehet új profilképet feltölteni",
@@ -1179,8 +1179,8 @@
   "You are creating a new workspace using your current account — <em>{{email}}</em>": "You are creating a new workspace using your current account — <em>{{email}}</em>",
   "To create a workspace under another email please sign up from the homepage": "To create a workspace under another email please sign up from the homepage",
   "Trash emptied": "Trash emptied",
-  "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.": "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.",
-  "Recently deleted": "Recently deleted",
+  "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.": "Biztos vagy benne, hogy véglegesen szeretnéd törölni a Kukában lévő összes dokumentumot? A törlés azonnal megtörténik és nem lehet visszavonni.",
+  "Recently deleted": "Nemrég törölve",
   "Trash is empty at the moment.": "Trash is empty at the moment.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy your account.": "A confirmation code has been sent to your email address, please enter the code below to permanently destroy your account.",
   "Are you sure? Deleting your account will destroy identifying data associated with your user and cannot be undone. You will be immediately logged out of {{appName}} and all your API tokens will be revoked.": "Are you sure? Deleting your account will destroy identifying data associated with your user and cannot be undone. You will be immediately logged out of {{appName}} and all your API tokens will be revoked.",
