--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -513,7 +513,6 @@
   "Mention": "Mention",
   "Embed": "Embed",
   "More options": "More options",
-  "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -601,6 +600,10 @@
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
   "Distribute columns": "Distribute columns",
+  "Download PDF": "Download PDF",
+  "Replace PDF": "Replace PDF",
+  "Delete PDF": "Delete PDF",
+  "Rename": "Rename",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
