fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -332,7 +332,7 @@
   "Mark all as read": "Összes megjelölése olvasottként",
   "You're all caught up": "Minden hozzászólást elolvasott",
   "Icon": "Ikon",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "OAuth kliens ikon",
   "My App": "Az én alkalmazásom",
   "Tagline": "Jelmondat",
   "A short description": "Rövid leírás",
