fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -1,6 +1,6 @@
 {
   "New API key": "Nieuwe API-sleutel",
-  "Delete": "Verwijder",
+  "Delete": "Verwijderen",
   "Revoke": "Intrekken",
   "Revoke API key": "API-sleutel intrekken",
   "Revoke token": "Tokens intrekken",
@@ -206,8 +206,6 @@
   "Move document": "Document verplaatsen",
   "Moving": "Verplaatsen",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Het document <em>{{ title }}</em> verplaatsen naar de {{ newCollectionName }} collectie zal de rechten voor alle werkruimte van <em>{{ prevPermission }}</em> wijzigen naar <em>{{ newPermission }}</em>.",
-  "More options": "Meer opties",
-  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Collecties konden niet worden geladen, start de app alsjeblieft opnieuw op",
   "Start view": "Start weergave",
   "Install now": "Nu installeren",
@@ -477,6 +475,7 @@
   "Keep as link": "Behoud als link",
   "Mention": "Vermelding",
   "Embed": "Insluiten",
+  "More options": "Meer opties",
   "Insert after": "Invoegen achter",
   "Insert before": "Invoegen voor",
   "Move up": "Omhoog verplaatsen",
