allow users edit image links

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -463,7 +463,6 @@
   "New email": "New email",
   "Email can't be empty": "Email can't be empty",
   "Your import completed": "Your import completed",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Previous match",
   "Next match": "Next match",
   "Find and replace": "Find and replace",
@@ -504,6 +503,7 @@
   "Code": "Code",
   "Comment": "Comment",
   "Create link": "Create link",
+  "Edit link": "Edit link",
   "Sorry, an error occurred creating the link": "Sorry, an error occurred creating the link",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Delete table",
