fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -22,8 +22,8 @@
   "Archive": "Arkiv",
   "Archive collection": "Archive collection",
   "Collection archived": "Collection archived",
-  "Archiving": "Archiving",
-  "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
+  "Archiving": "Arkiverer",
+  "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Arkivering af denne samling vil også arkivere alle dokumenter i den. Dokumenter fra samlingen vil ikke længere være synlige i søgeresultater.",
   "Restore": "Restore",
   "Collection restored": "Collection restored",
   "Delete collection": "Slet samling",
@@ -66,7 +66,7 @@
   "Copy as Markdown": "Kopiér som Markdown",
   "Markdown copied to clipboard": "Markdown kopieret til udklipsholder",
   "Copy as text": "Copy as text",
-  "Text copied to clipboard": "Text copied to clipboard",
+  "Text copied to clipboard": "Tekst kopieret til udklipsholder",
   "Copy public link": "Copy public link",
   "Link copied to clipboard": "Link kopieret til udklipsholder",
   "Copy link": "Kopiér link",
