fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Permissions",
   "Collection permissions": "Droits d'accès de la collection",
   "Share this collection": "Partagez cette collection",
+  "Import document": "Importer un document",
+  "Sort in sidebar": "Trier dans la barre latérale",
+  "A-Z sort": "Tri de A à Z",
+  "Z-A sort": "Tri de Z à A",
+  "Manual sort": "Tri manuel",
   "Search in collection": "Rechercher dans la collection",
   "Star": "Ajouter aux favoris",
   "Unstar": "Retirer des favoris",
@@ -83,7 +88,6 @@
   "Search in document": "Rechercher dans le document",
   "Print": "Imprimer",
   "Print document": "Imprimer le document",
-  "Import document": "Importer un document",
   "Templatize": "En faire un modèle",
   "Create template": "Créer un modèle",
   "Open random document": "Ouvrir un document au hasard",
@@ -206,6 +210,8 @@
   "Move document": "Déplacer le document",
   "Moving": "En cours de déplacement",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Déplacer le document <em>{{ title }}</em> vers la collection {{ newCollectionName }} changera les permissions pour tous les membres de l'espace de travail de <em>{{ prevPermission }}</em> à <em>{{ newPermission }}</em>.",
+  "More options": "Plus d'options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Les collections n'ont pas pu être chargées, veuillez recharger la page",
   "Start view": "Page d'accueil",
   "Install now": "Installer maintenant",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Collection supprimée",
   "Untitled": "Sans titre",
   "Unpin": "Désépingler",
-  "{{ minutes }}m read": "{{ minutes }}m de lecture",
   "Select a location to copy": "Sélectionnez un emplacement pour copier",
   "Document copied": "Document copié",
   "Couldn’t copy the document, try again?": "Impossible de copier le document, veuillez réessayer ?",
@@ -316,7 +321,7 @@
   "Permission": "Permission",
   "Change Language": "Changer de langue",
   "Dismiss": "Fermer",
-  "Lightbox": "Lightbox",
+  "Lightbox": "Visionneuse",
   "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
   "Close": "Fermer",
   "Previous": "Précédent",
@@ -345,6 +350,7 @@
   "Reaction picker": "Sélecteur de réaction",
   "Could not load reactions": "Impossible de charger les réactions",
   "Reaction": "Réaction",
+  "{{ minutes }}m read": "{{ minutes }}m de lecture",
   "Revision deleted": "Révision supprimée",
   "Current version": "Version actuelle",
   "{{userName}} edited": "{{userName}} a modifié",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Désactivez ce paramètre pour empêcher les moteurs de recherche d'indexer la page.",
   "Show last modified": "Afficher les dernières modifications",
   "Display the last modified timestamp on the shared page": "Afficher le dernier horodatage modifié sur la page partagée",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "Tous les documents de cette collection seront partagés sur le web, y compris les nouveaux documents ajoutés plus tard",
   "Invite": "Inviter",
   "{{ userName }} was added to the collection": "{{ userName }} été ajouté à la collection",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Impossible de charger les documents partagés",
   "Shared with me": "Partagés avec moi",
   "Show more": "Afficher plus",
+  "Link options": "Link options",
   "Could not load starred documents": "Impossible de charger les documents favoris",
   "Starred": "Favoris",
   "Up to date": "À jour",
@@ -475,7 +484,7 @@
   "Keep as link": "Garder comme lien",
   "Mention": "Mentionner",
   "Embed": "Intégrer",
-  "More options": "Plus d'options",
+  "Rename": "Renommer",
   "Insert after": "Insérer après",
   "Insert before": "Insérer avant",
   "Move up": "Déplacer vers le haut",
@@ -559,7 +568,6 @@
   "Video": "Vidéo",
   "None": "Abc",
   "Delete embed": "Supprimer l'intégration",
-  "Rename": "Renommer",
   "Could not import file": "Le fichier n'a pas pu être importé",
   "Unsubscribed from document": "Se désabonner du document",
   "Unsubscribed from collection": "Désabonné de la collection",
@@ -577,10 +585,6 @@
   "Integrations": "Intégrations",
   "API key": "Clé API",
   "Show path to document": "Afficher le chemin d'accès au document",
-  "Sort in sidebar": "Trier dans la barre latérale",
-  "A-Z sort": "Tri de A à Z",
-  "Z-A sort": "Tri de Z à A",
-  "Manual sort": "Tri manuel",
   "Collection menu": "Menu de la collection",
   "Comment options": "Options des commentaires",
   "Enable viewer insights": "Activer le visualisateur d'analyses",
