fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "Jogosultságok",
   "Collection permissions": "Gyűjtemény jogosultságai",
   "Share this collection": "Gyűjtemény megosztása",
+  "Import document": "Dokumentum importálása",
+  "Sort in sidebar": "Rendezés az oldalsávban",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "Egyedi sorrend",
   "Search in collection": "Keresés a gyűjteményben",
   "Star": "Csillagozás",
   "Unstar": "Csillagozás megszüntetése",
@@ -83,7 +88,6 @@
   "Search in document": "Keresés a dokumentumban",
   "Print": "Nyomtatás",
   "Print document": "Dokumentum nyomtatása",
-  "Import document": "Dokumentum importálása",
   "Templatize": "Sablonná alakítás",
   "Create template": "Sablon létrehozása",
   "Open random document": "Véletlenszerű dokumentum megnyítása",
@@ -206,6 +210,8 @@
   "Move document": "Dokumentum áthelyezése",
   "Moving": "Áthelyezés",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "A {{ title }} nevű dokumentum áthelyezése a {{ newCollectionName }} gyűjteménybe megváltoztatja a munkaterület tagjainak hozzáférését: {{ prevPermission }} -> {{ newPermission }}",
+  "More options": "További lehetőségek",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "A gyűjtemények nem tölthetők be, kérem töltse újra a programot",
   "Start view": "Kezdje el",
   "Install now": "Telepítés most",
@@ -216,7 +222,6 @@
   "Deleted Collection": "Törölt gyűjtemény",
   "Untitled": "Névtelen",
   "Unpin": "Feloldás",
-  "{{ minutes }}m read": "{{ minutes }} perccel ezelőtt olvasta",
   "Select a location to copy": "Válassz ki egy helyet a másoláshoz",
   "Document copied": "Dokumentum átmásolva",
   "Couldn’t copy the document, try again?": "A dokumentum másolása sikertelen volt. Újrapróbálod?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reagálásválasztó",
   "Could not load reactions": "Nem sikerült betölteni a reagálásokat",
   "Reaction": "Reagálás",
+  "{{ minutes }}m read": "{{ minutes }} perccel ezelőtt olvasta",
   "Revision deleted": "A módosítás törölve lett",
   "Current version": "Jelenlegi verzió",
   "{{userName}} edited": "{{userName}} módosította",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Kapcsold ki ezt a beállítást, hogy megakadályozzd a keresőmotorokat az oldal indexelésében.",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Az utolsó módosítás idejének megjelenítése a megosztott oldalon",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "A gyűjteményben található összes dokumentum meg lesz osztva a weben, a jövőben hozzáadott dokumentumokkal együtt",
   "Invite": "Meghívás",
   "{{ userName }} was added to the collection": "{{ userName }} hozzáadva a gyűjteményhez",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Nem lehet menteni a dokumentumot",
   "Shared with me": "Velem megosztva",
   "Show more": "Mutass többet",
+  "Link options": "Link options",
   "Could not load starred documents": "Nem lehet menteni a dokumentumot",
   "Starred": "Csillagozott",
   "Up to date": "Naprakész",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Beágyazott",
-  "More options": "További lehetőségek",
+  "Rename": "Átnevezés",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Videó",
   "None": "Nincs",
   "Delete embed": "Delete embed",
-  "Rename": "Átnevezés",
   "Could not import file": "Fájl importálása nem lehetséges",
   "Unsubscribed from document": "Leiratkozott a dokumentumról",
   "Unsubscribed from collection": "Leiratkozott a dokumentumról",
@@ -577,10 +585,6 @@
   "Integrations": "Integrációk",
   "API key": "API key",
   "Show path to document": "Dokumentum elérési útjának megjelenítése",
-  "Sort in sidebar": "Rendezés az oldalsávban",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "Egyedi sorrend",
   "Collection menu": "Gyűjtemény menü",
   "Comment options": "Hozzászólás beállítások",
   "Enable viewer insights": "Enable viewer insights",
